--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@fontsource/jetbrains-mono": "^5.2.6",
     "@tailwindcss/vite": "^4.1.13",
-    "lucide-react": "^0.542.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
