--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^4.4.0",
     "@astrojs/sitemap": "^3.6.0",
     "@fontsource/jetbrains-mono": "^5.2.6",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.14.1",
     "date-fns": "^4.1.0",
